fix: Truncated deep links (#3484)
* fix: truncated deep links

* Show buttons

* Fix separator and spacing

* Fix tests

* Fix tests

* Fix modules

--- a/src/shared/components/DynamicPageComponent/DynamicPageComponent.scss
+++ b/src/shared/components/DynamicPageComponent/DynamicPageComponent.scss
@@ -20,24 +20,26 @@
     display: none;
   }
 
-  &__actions {
-    display: flex;
-    align-items: center;
+  [data-component-name='ObjectPageTitleMiddleSection'] > div {
+    flex-basis: 100%;
+  }
 
-    ui5-button {
-      &:not(:last-of-type) {
-        margin-right: 0.5rem;
-      }
+  ui5-button {
+    &:not(:last-of-type) {
+      margin-right: 0.5rem;
     }
+  }
 
-    .separator {
-      display: inline-block;
-      width: 1px;
-      height: 90%;
-      margin-left: 5px;
-      background-color: var(--sapList_BorderColor);
-      border-radius: 5px;
-    }
+  .separator {
+    display: inline-block;
+    width: 1px;
+    position: absolute;
+    top: 50%;
+    height: 1.5rem;
+    margin-top: -0.75rem;
+    margin-left: 5px;
+    background-color: var(--sapList_BorderColor);
+    border-radius: 5px;
   }
 }
 
